fix weird line on mobile nav

--- a/src/styles/burger-menu.scss
+++ b/src/styles/burger-menu.scss
@@ -82,6 +82,7 @@
 /* Individual item */
 .bm-item {
     display: inline-block;
+	outline: none;
 }
 
 .bm-item:hover {
